2004-05-24  Not Zed  <NotZed@Ximian.com>

	* em-popup.c (em_popup_target_new_select): only enable add sender
	if we also have 1 selected.  #56663.

	* em-folder-view.c (emfv_enable_menus): remove some debug.

	* em-format-html.c (efh_format_header): output commas between
	newsgroups, and also append_printf.

2004-05-24  Sivaiah Nallagatla <snallagatla@novell.com>
	
	* mail-account-gui.c (mail_account_gui_build_extra_conf) : added empty 
       handling for CAMEL_PROVIDER_CONF_HIDDEN
	* (extract_values) : added handling for CAMEL_PROVIDER_CONF_HIDDEN


2004-05-24  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (em_folder_tree_set_selected): use set_cursor
	instead of scroll_to_row.  See #58383.
	(get_selected_uris_iterate): removed.
	(em_folder_tree_get_selected_uris): use an interative call based
	on gtk_tree_selection_get_selected_rows rather than
	selected_foreach, as the gtk+ docs suggest.  was trying to fix a
	bug but it seems gtktreeselection bug (shift-select rows using
	keyboard only)

	* message-list.c (regen_list_regened): pull the message from the
	regen list before we check the list and pending uid.

	* em-folder-view.c (emfv_enable_menus): remove the hack for
	enabling select delete from here and put it in the right place.
	(em_folder_view_get_popup_target): put it here so its consistent.

2004-05-22  Not Zed  <NotZed@Ximian.com>

	* mail-tools.c (mail_tool_uri_to_folder): put note_store back in.
	Quick hack to fix the issue of folders being opened before we hook
	onto folder_created.

	* mail-folder-cache.c: remove 'name' from update struct, not used
	anymore

	** Another unread count bug, #58814.

	* mail-vfolder.c (context_rule_added):
	* mail-tools.c (mail_tool_uri_to_folder):
	* mail-component.c (mc_add_local_store_done): don't call mail note
	folder anymore, fix up headers.

	* mail-folder-cache.c (store_folder_opened)
	(mail_note_store_remove, mail_note_store): handle the new
	store:folder_opened signal.  Don't need the mail_note_folder hack